Correction static files

--- a/searching/index.html
+++ b/searching/index.html
@@ -19,9 +19,9 @@
         <!-- <script type="text/javascript" src="qry.js"></script> -->
 
 
-        <script src="code/highcharts.js"></script>
-        <script src="code/highcharts-3d.js"></script>
-        <script src="code/modules/exporting.js"></script>
+        <script src="searching/code/highcharts.js"></script>
+        <script src="searching/code/highcharts-3d.js"></script>
+        <script src="searching/code/modules/exporting.js"></script>
         
         <div id="container" style="height: 400px"></div>
         
