--- a/searching/chart1.html
+++ b/searching/chart1.html
@@ -49,17 +49,16 @@ Highcharts.chart('container', {
         type: 'pie',
         name: 'Browser share',
         data: [
-            ['Firefox', 45.0],
-            ['IE', 26.8],
+            ['Anglais', 45.0],
+            ['Français', 26.8],
             {
-                name: 'Chrome',
+                name: 'Japonais',
                 y: 12.8,
                 sliced: true,
                 selected: true
             },
-            ['Safari', 8.5],
-            ['Opera', 6.2],
-            ['Others', 0.7]
+            ['Espagnole', 8.5],
+            ['Chinois', 6.2],
         ]
     }]
 });
