--- a/searching/index.html
+++ b/searching/index.html
@@ -90,7 +90,7 @@
                                     }
                                 },
                                 title: {
-                                    text: 'Browser market shares at a specific website, 2014'
+                                    text: 'Les langues les plus utilisant de ce mot'
                                 },
                                 tooltip: {
                                     pointFormat: '{series.name}: <b>{point.percentage:.1f}%</b>'
@@ -123,7 +123,7 @@
                                 },
                                 yAxis: {
                                     title: {
-                                        text: 'Total percent market share'
+                                        text: 'Nombre de partage'
                                     }
 
                                 },
@@ -169,216 +169,33 @@
                         name: 'Brands',
                         colorByPoint: true,
                         data: [{
-                            name: 'Microsoft Internet Explorer',
+                            name: 'Pierre',
                             y: 56.33,
-                            drilldown: 'Microsoft Internet Explorer'
+                            drilldown: 'Pierre'
                         }, {
-                            name: 'Chrome',
+                            name: 'Mahmoud',
                             y: 24.03,
-                            drilldown: 'Chrome'
+                            drilldown: 'Mahmoud'
                         }, {
-                            name: 'Firefox',
+                            name: 'Jack',
                             y: 10.38,
-                            drilldown: 'Firefox'
+                            drilldown: 'Jack'
                         }, {
-                            name: 'Safari',
+                            name: 'Rémie',
                             y: 4.77,
-                            drilldown: 'Safari'
+                            drilldown: 'Rémie'
                         }, {
-                            name: 'Opera',
+                            name: 'Nancy',
                             y: 0.91,
-                            drilldown: 'Opera'
+                            drilldown: 'Nancy'
                         }, {
-                            name: 'Proprietary or Undetectable',
+                            name: 'Guillaume',
                             y: 0.2,
                             drilldown: null
                         }]
                     }];
-                    optionsHighCharts2.drilldown=[{
-                        series: [{
-                            name: 'Microsoft Internet Explorer',
-                            id: 'Microsoft Internet Explorer',
-                            data: [
-                                [
-                                    'v11.0',
-                                    24.13
-                                ],
-                                [
-                                    'v8.0',
-                                    17.2
-                                ],
-                                [
-                                    'v9.0',
-                                    8.11
-                                ],
-                                [
-                                    'v10.0',
-                                    5.33
-                                ],
-                                [
-                                    'v6.0',
-                                    1.06
-                                ],
-                                [
-                                    'v7.0',
-                                    0.5
-                                ]
-                            ]
-                        }, {
-                            name: 'Chrome',
-                            id: 'Chrome',
-                            data: [
-                                [
-                                    'v40.0',
-                                    5
-                                ],
-                                [
-                                    'v41.0',
-                                    4.32
-                                ],
-                                [
-                                    'v42.0',
-                                    3.68
-                                ],
-                                [
-                                    'v39.0',
-                                    2.96
-                                ],
-                                [
-                                    'v36.0',
-                                    2.53
-                                ],
-                                [
-                                    'v43.0',
-                                    1.45
-                                ],
-                                [
-                                    'v31.0',
-                                    1.24
-                                ],
-                                [
-                                    'v35.0',
-                                    0.85
-                                ],
-                                [
-                                    'v38.0',
-                                    0.6
-                                ],
-                                [
-                                    'v32.0',
-                                    0.55
-                                ],
-                                [
-                                    'v37.0',
-                                    0.38
-                                ],
-                                [
-                                    'v33.0',
-                                    0.19
-                                ],
-                                [
-                                    'v34.0',
-                                    0.14
-                                ],
-                                [
-                                    'v30.0',
-                                    0.14
-                                ]
-                            ]
-                        }, {
-                            name: 'Firefox',
-                            id: 'Firefox',
-                            data: [
-                                [
-                                    'v35',
-                                    2.76
-                                ],
-                                [
-                                    'v36',
-                                    2.32
-                                ],
-                                [
-                                    'v37',
-                                    2.31
-                                ],
-                                [
-                                    'v34',
-                                    1.27
-                                ],
-                                [
-                                    'v38',
-                                    1.02
-                                ],
-                                [
-                                    'v31',
-                                    0.33
-                                ],
-                                [
-                                    'v33',
-                                    0.22
-                                ],
-                                [
-                                    'v32',
-                                    0.15
-                                ]
-                            ]
-                        }, {
-                            name: 'Safari',
-                            id: 'Safari',
-                            data: [
-                                [
-                                    'v8.0',
-                                    2.56
-                                ],
-                                [
-                                    'v7.1',
-                                    0.77
-                                ],
-                                [
-                                    'v5.1',
-                                    0.42
-                                ],
-                                [
-                                    'v5.0',
-                                    0.3
-                                ],
-                                [
-                                    'v6.1',
-                                    0.29
-                                ],
-                                [
-                                    'v7.0',
-                                    0.26
-                                ],
-                                [
-                                    'v6.2',
-                                    0.17
-                                ]
-                            ]
-                        }, {
-                            name: 'Opera',
-                            id: 'Opera',
-                            data: [
-                                [
-                                    'v12.x',
-                                    0.34
-                                ],
-                                [
-                                    'v28',
-                                    0.24
-                                ],
-                                [
-                                    'v27',
-                                    0.17
-                                ],
-                                [
-                                    'v29',
-                                    0.16
-                                ]
-                            ]
-                        }]
-                    }];
-                    //Highcharts.chart('container', optionsHighCharts);
+                   
+                    Highcharts.chart('container', optionsHighCharts);
                     Highcharts.chart('container2', optionsHighCharts2);
                 });
             });
