--- a/searching/index.html
+++ b/searching/index.html
@@ -111,10 +111,10 @@
                         type: 'column'
                     },
                     title: {
-                        text: 'Browser market shares. January, 2015 to May, 2015'
+                        text: 'Le nombre de partage par twit'
                     },
                     subtitle: {
-                        text: 'Click the columns to view versions. Source: <a href="http://netmarketshare.com">netmarketshare.com</a>.'
+                        text: ''
                     },
                     xAxis: {
                         type: 'category'
