--- a/searching/index.html
+++ b/searching/index.html
@@ -153,12 +153,7 @@
                         type: 'area'
                     },
                     title: {
-                        text: 'US and USSR nuclear stockpiles'
-                    },
-                    subtitle: {
-                        text: 'Sources: <a href="https://thebulletin.org/2006/july/global-nuclear-stockpiles-1945-2006">' +
-                            'thebulletin.org</a> &amp; <a href="https://www.armscontrol.org/factsheets/Nuclearweaponswhohaswhat">' +
-                            'armscontrol.org</a>'
+                        text: 'Evolution du nombre de tweets publiés dans la semaine'
                     },
                     xAxis: {
                         allowDecimals: false,
@@ -170,20 +165,20 @@
                     },
                     yAxis: {
                         title: {
-                            text: 'Nuclear weapon states'
+                            text: 'Nombre de tweets publiés'
                         },
                         labels: {
                             formatter: function () {
-                                return this.value / 1000 + 'k';
+                                return this.value / 100;
                             }
                         }
                     },
                     tooltip: {
-                        pointFormat: '{series.name} had stockpiled <b>{point.y:,.0f}</b><br/>warheads in {point.x}'
+                        pointFormat: '<b>{point.y:,.0f}</b> tweets publiés le jour n°{point.x}'
                     },
                     plotOptions: {
                         area: {
-                            pointStart: 1940,
+                            pointStart: 1,
                             marker: {
                                 enabled: false,
                                 symbol: 'circle',
@@ -235,18 +230,11 @@
                         }]
                     }];      
                     optionsHighCharts3.series = [{
-                        name: 'USA',
-                        data: data.third
-                        /*[
-                            null, null, null, null, null, 6, 11, 32, 110, 235,
-                            369, 640, 1005, 1436, 2063, 3057, 4618, 6444, 9822, 15468,
-                            20434, 24126, 27387, 29459, 31056, 31982, 32040, 31233, 29224, 27342,
-                            26662, 26956, 27912, 28999, 28965, 27826, 25579, 25722, 24826, 24605,
-                            24304, 23464, 23708, 24099, 24357, 24237, 24401, 24344, 23586, 22380,
-                            21004, 17287, 14747, 13076, 12555, 12144, 11009, 10950, 10871, 10824,
-                            10577, 10527, 10475, 10421, 10358, 10295, 10104, 9914, 9620, 9326,
-                            5113, 5113, 4954, 4804, 4761, 4717, 4368, 4018
-                        ]*/
+                        name: 'Volume',
+                        data: /*data.third*/
+                        [
+                            5113, 5113, 4954, 4804, 4761, 4717, 4368
+                        ]
                     }];
 
                     Highcharts.chart('container', optionsHighCharts);
