--- a/searching/index.html
+++ b/searching/index.html
@@ -93,7 +93,7 @@
                         }
                     },
                     title: {
-                        text: 'Les langues les plus utilisant de ce mot'
+                        text: 'Les régions utilisant le plus ce mot-clé'
                     },
                     tooltip: {
                         pointFormat: '{series.name}: <b>{point.percentage:.1f}%</b>'
