change second chart unit

--- a/searching/index.html
+++ b/searching/index.html
@@ -34,7 +34,6 @@
                     <input type="submit" value="Envoyer">
                 </fieldset>
             </form>
-            <p>Nombre de tweets récupérés : <b><span id="stats"></span></b></p>
         </div>
 
         <!-- <script type="text/javascript" src="qry.js"></script> -->
@@ -68,8 +67,7 @@
                 </tbody>
             </table>
         </div>
-        <div id="container5" style="min-width: 310px;  height: 400px; margin: 0 auto; display:inline-block;"></div>
-        <div id="container5bis" style="min-width: 310px;  height: 400px; margin: 0 auto; display:inline-block;"></div>
+        <div id="container5" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
         
 
         <script type="text/javascript">
@@ -149,14 +147,9 @@
                             borderWidth: 0,
                             dataLabels: {
                                 enabled: true,
-                                format: '{point.y:.1f}%'
+                                format: '{point.y:.0f}'
                             }
                         }
-                    },
-
-                    tooltip: {
-                        headerFormat: '<span style="font-size:11px">{series.name}</span><br>',
-                        pointFormat: '<span style="color:{point.color}">{point.name}</span>: <b>{point.y:.2f}%</b> of total<br/>'
                     }
                 };
                 //chart 3
@@ -215,32 +208,6 @@
                     xAxis: {
                         categories: [
                             'Followers',
-                        ],
-                        crosshair: true
-                    },
-                    yAxis: {
-                        min: 0,
-                        title: {
-                            text: ''
-                        }
-                    },
-                    plotOptions: {
-                        column: {
-                            pointPadding: 0.2,
-                            borderWidth: 0
-                        }
-                    }
-                };
-                //chart 5 bis
-                var optionsHighCharts5bis = {
-                    chart: {
-                        type: 'column'
-                    },
-                    title: {
-                        text: 'Tweets\' count of most popular users'
-                    },
-                    xAxis: {
-                        categories: [
                             'Publications',
                         ],
                         crosshair: true
@@ -267,7 +234,7 @@
                         data: data.first
                     }];
                     optionsHighCharts2.series = [{
-                        name: 'Brands',
+                        name: 'Retweets count',
                         colorByPoint: true,
                         data: data.second
                     }];      
@@ -276,10 +243,7 @@
                         data: data.third
                     }];
                     optionsHighCharts5.series = data.fifth;
-                    optionsHighCharts5bis.series = data.fifth_bis;
 
-                    //Graph 0 : Statistiques
-                    $("#stats").html(data.zero);
                     //Graph 1 : Camembert
                     Highcharts.chart('container', optionsHighCharts);
                     //Graph 2 : Colonne
@@ -312,8 +276,6 @@
                     $("#container4 table tbody").html(tbody);
                     //Graph 5 : Colonne
                     Highcharts.chart('container5', optionsHighCharts5);
-                    //Graph 5 : Colonne BIS
-                    Highcharts.chart('container5bis', optionsHighCharts5bis);
                 });
             });
         </script>       
